<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">LivefyreReviewsAppv3.1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="addPhoto">ADD PHOTO</string>
    <string name="Description">Description</string>
    <string name="Cons">Cons</string>
    <string name="Title">Title</string>
    <string name="Pros">Pros</string>
    <string name="FlagReview">Flag Review</string>
    <string name="Spam">Spam</string>
    <string name="Offensive">Offensive</string>
    <string name="OffTopic">Off-Topic</string>
    <string name="Disagree">Disagree</string>
    <string name="helpful_spinner">Most Helpful</string>
    <string-array name="helpful_categories">
        <item android:textColor="#000000">Most Helpful</item>
        <item android:textColor="#000000">Highest Rating</item>
        <item android:textColor="#000000">Lowest Rating</item>
        <item android:textColor="#000000">Newest</item>
        <item android:textColor="#000000">Oldest</item>
    </string-array>
</resources>
