<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom" >

    <LinearLayout
        android:id="@+id/emptyDialogSpace"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/mainDialog"
        android:background="#80000000"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainDialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/FlagReview"
            android:textColor="@color/ash"
            android:textSize="16sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/spam"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            android:paddingLeft="15dp"
            android:text="@string/Spam"
            android:textColor="@color/ash"
            android:textSize="16sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/offensive"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            android:paddingLeft="15dp"
            android:text="@string/Offensive"
            android:textColor="@color/ash"
            android:textSize="16sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/offtopic"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            android:paddingLeft="15dp"
            android:text="@string/OffTopic"
            android:textColor="@color/ash"
            android:textSize="16sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/disagree"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/Disagree"
            android:textColor="@color/ash"
            android:textSize="16sp"
            android:gravity="center_vertical" />
    </LinearLayout>

</RelativeLayout>