<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.livefyre.comments.activities.NewActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:id="@+id/newreviewSV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/newReviewTitleEt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Title"
                    android:imeOptions="flagNavigateNext"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textHint"
                    android:textSize="24sp" />

            </android.support.design.widget.TextInputLayout>

            <RatingBar
                android:id="@+id/newReviewRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:numStars="5"
                android:progressDrawable="@drawable/big_starbar" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/newReviewProsEt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Pros"
                    android:lineSpacingExtra="5dp"
                    android:textColor="@color/textColor"
                    android:textColorHighlight="@color/textHint"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/newReviewConsEt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Cons"
                    android:lineSpacingExtra="5dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/textColor"
                    android:textColorHighlight="@color/textHint"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/newReviewBodyEt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/Description"
                    android:paddingRight="16dp"
                    android:textColor="@color/textColor"
                    android:textColorHighlight="@color/textHint"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/addPhotoLL"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/camBtn"
                    android:layout_width="23dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/cam" />

                <TextView
                    android:id="@+id/addPhoto"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_toRightOf="@+id/camBtn"
                    android:paddingLeft="8dp"
                    android:text="@string/addPhoto"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:gravity="center"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/capturedImage"
                        android:layout_width="wrap_content"
                        android:layout_height="360dp"
                        android:background="@mipmap/wimg"
                        android:scaleType="centerCrop"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:id="@+id/deleteCapturedImage"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="top|right"
                        android:background="@color/ash"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_centerInParent="true"
                            android:src="@mipmap/xmark" />
                    </RelativeLayout>
                </FrameLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
